DHFPROD-5312: Make a (tile height + footer) fit into 100% of the page to avoid activating page scrollbar

--- a/marklogic-data-hub-central/ui/src/App.scss
+++ b/marklogic-data-hub-central/ui/src/App.scss
@@ -19,6 +19,8 @@ body {
   overflow-y: auto;
   height: 90vh;
   max-height: 92vh;
+  margin-bottom: 70px;
+  flex: 1;
 }
 
 .ant-layout-header {
@@ -34,7 +36,9 @@ body {
   margin: 0;
 }
 main {
-  flex: 1;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 #background {
   display: flex;
@@ -44,9 +48,10 @@ main {
 .ant-layout-footer {
   display: flex;
   justify-content: center;
-  padding: 50px 0 0 0;
+  padding: 20px 0 0 0;
   margin: 0;
   background-color: transparent;
+  height: 60px;
 }
 
 /* Handle any excess scroll space below background image */
