--- a/marklogic-data-hub-central/ui/src/pages/Overview.module.scss
+++ b/marklogic-data-hub-central/ui/src/pages/Overview.module.scss
@@ -9,7 +9,7 @@
     line-height: 1.4;
     color: #333;
     background: #fff;
-    margin: 20px 70px 20px 40px;
+    margin: 20px 70px 0px 40px;
     .title {
         font-size: 28px;
     }
