--- a/marklogic-data-hub-central/ui/src/pages/TilesView.module.scss
+++ b/marklogic-data-hub-central/ui/src/pages/TilesView.module.scss
@@ -1,5 +1,5 @@
 .tilesViewContainer {
-    height: 95%;
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 10px 10px 0 10px;
